update sln so builds in cake

--- a/.gitignore
+++ b/.gitignore
@@ -64,10 +64,8 @@ StyleCopReport.xml
 *.ilk
 *.meta
 *.obj
-*.iobj
 *.pch
 *.pdb
-*.ipdb
 *.pgc
 *.pgd
 *.rsp
@@ -240,7 +238,6 @@ Backup*/
 UpgradeLog*.XML
 UpgradeLog*.htm
 ServiceFabricBackup/
-*.rptproj.bak
 
 # SQL Server files
 *.mdf
@@ -251,7 +248,6 @@ ServiceFabricBackup/
 *.rdl.data
 *.bim.layout
 *.bim_*.settings
-*.rptproj.rsuser
 
 # Microsoft Fakes
 FakesAssemblies/
@@ -299,7 +295,7 @@ __pycache__/
 *.pyc
 
 # Cake - Uncomment if you are using it
-# tools/**
+tools/**
 # !tools/packages.config
 
 # Tabs Studio
@@ -322,9 +318,3 @@ ASALocalRun/
 
 # MSBuild Binary and Structured Log
 *.binlog
-
-# NVidia Nsight GPU debugger configuration file
-*.nvuser
-
-# MFractors (Xamarin productivity tool) working folder 
-.mfractor/
