--- a/src/NetTestRegimentation.Moq/NetTestRegimentation.Moq.csproj
+++ b/src/NetTestRegimentation.Moq/NetTestRegimentation.Moq.csproj
@@ -5,6 +5,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Moq" Version="4.10.1" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\NetTestRegimentation\NetTestRegimentation.csproj" />
   </ItemGroup>
 
