--- a/src/Directory.build.props
+++ b/src/Directory.build.props
@@ -33,7 +33,7 @@
     <PackageReference Include="xunit" Version="2.4.1" />
     <PackageReference Include="xunit.runner.visualstudio" Version="2.4.1" />
     <PackageReference Include="Xunit.StaFact" Version="0.3.18" />
-    <PackageReference Include="PublicApiGenerator" Version="8.1.0" />
+    <!--<PackageReference Include="PublicApiGenerator" Version="8.1.0" />-->
   </ItemGroup>
 
   <ItemGroup Condition="$(IsTestProject)">
