*breaking* test prep for xunit
needs the theory discovery looking at to see if we can work around the attribute limitations

--- a/src/NetTestRegimentation.XUnit/NetTestRegimentation.XUnit.csproj
+++ b/src/NetTestRegimentation.XUnit/NetTestRegimentation.XUnit.csproj
@@ -4,4 +4,14 @@
     <TargetFrameworks>net45;netcoreapp3.0</TargetFrameworks>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="xunit.abstractions" Version="2.0.3" />
+    <PackageReference Include="xunit.assert" Version="2.4.1" />
+    <PackageReference Include="xunit.extensibility.core" Version="2.4.1" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\NetTestRegimentation\NetTestRegimentation.csproj" />
+  </ItemGroup>
+
 </Project>
