--- a/src/Directory.build.props
+++ b/src/Directory.build.props
@@ -45,7 +45,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <!--<PackageReference Include="Nerdbank.GitVersioning" Version="2.3.38" PrivateAssets="all" />-->
+    <PackageReference Include="Nerdbank.GitVersioning" Version="3.4.231" PrivateAssets="all" />	
   </ItemGroup>
   
   <ItemGroup Condition="'$(IsTestProject)' != 'true' and '$(SourceLinkEnabled)' != 'false'">
