--- a/src/NetTestRegimentation/NetTestRegimentation.csproj
+++ b/src/NetTestRegimentation/NetTestRegimentation.csproj
@@ -1,7 +1,7 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFrameworks>net45;netstandard2.0</TargetFrameworks>
+    <TargetFrameworks>netstandard2.0</TargetFrameworks>
     <Description>A library to aid in structuring unit tests to help enforce design and behaviours during development.</Description>
   </PropertyGroup>
 
