--- a/src/NetTestRegimentation.UnitTests/NetTestRegimentation.UnitTests.csproj
+++ b/src/NetTestRegimentation.UnitTests/NetTestRegimentation.UnitTests.csproj
@@ -9,4 +9,8 @@
     <ProjectReference Include="..\NetTestRegimentation\NetTestRegimentation.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="XUnit\Theories\" />
+  </ItemGroup>
+
 </Project>
