--- a/src/NetTestRegimentation.XUnit/NetTestRegimentation.XUnit.csproj
+++ b/src/NetTestRegimentation.XUnit/NetTestRegimentation.XUnit.csproj
@@ -7,6 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.VisualStudio.Validation" Version="17.0.65" />
     <PackageReference Include="xunit.extensibility.core" Version="2.4.2" />
   </ItemGroup>
 
