--- a/src/NetTestRegimentation.UnitTests/NetTestRegimentation.UnitTests.csproj
+++ b/src/NetTestRegimentation.UnitTests/NetTestRegimentation.UnitTests.csproj
@@ -1,7 +1,8 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFrameworks>net48;netcoreapp6.0</TargetFrameworks>
+    <TargetFrameworks>net48;net8.0</TargetFrameworks>
+    <OutputType>exe</OutputType>
   </PropertyGroup>
 
   <ItemGroup>
