--- a/src/NetTestRegimentation.XUnit/NetTestRegimentation.XUnit.csproj
+++ b/src/NetTestRegimentation.XUnit/NetTestRegimentation.XUnit.csproj
@@ -8,7 +8,7 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.VisualStudio.Validation" Version="17.8.8" />
-    <PackageReference Include="xunit.extensibility.core" Version="2.9.3" />
+    <PackageReference Include="xunit.v3.extensibility.core" Version="2.0.0" />
   </ItemGroup>
 
 </Project>
