remove moq tests

--- a/src/NetTestRegimentation.UnitTests/NetTestRegimentation.UnitTests.csproj
+++ b/src/NetTestRegimentation.UnitTests/NetTestRegimentation.UnitTests.csproj
@@ -6,11 +6,13 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\NetTestRegimentation\NetTestRegimentation.csproj" />
+    <Compile Remove="XUnit\**" />
+    <EmbeddedResource Remove="XUnit\**" />
+    <None Remove="XUnit\**" />
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="XUnit\Theories\" />
+    <ProjectReference Include="..\NetTestRegimentation\NetTestRegimentation.csproj" />
   </ItemGroup>
 
 </Project>
