--- a/src/NetTestRegimentation.SourceGenerator.DotNetTool/NetTestRegimentation.SourceGenerator.DotNetTool.csproj
+++ b/src/NetTestRegimentation.SourceGenerator.DotNetTool/NetTestRegimentation.SourceGenerator.DotNetTool.csproj
@@ -11,6 +11,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.Build" Version="17.13.9">
+      <ExcludeAssets>runtime</ExcludeAssets>
+    </PackageReference>
+    <PackageReference Include="Microsoft.Build.Locator" Version="1.7.8" />
     <PackageReference Include="Microsoft.CodeAnalysis.CSharp" Version="4.14.0" PrivateAssets="none" />
     <PackageReference Include="Whipstaff.CommandLine" Version="8.2.105-beta" />
   </ItemGroup>
