--- a/src/NetTestRegimentation.SourceGenerator.DotNetTool/NetTestRegimentation.SourceGenerator.DotNetTool.csproj
+++ b/src/NetTestRegimentation.SourceGenerator.DotNetTool/NetTestRegimentation.SourceGenerator.DotNetTool.csproj
@@ -8,6 +8,7 @@
     <ToolCommandName>nettestregimentation-sourcegen</ToolCommandName>
     <AssemblyName>nettestregimentation-sourcegen</AssemblyName>
     <PackageDescription>dot net tool for producing test code for a project.</PackageDescription>
+    <NoWarn>CA1515</NoWarn>
   </PropertyGroup>
 
   <ItemGroup>
@@ -16,7 +17,8 @@
     </PackageReference>
     <PackageReference Include="Microsoft.Build.Locator" Version="1.9.1" />
     <PackageReference Include="Microsoft.CodeAnalysis.CSharp" Version="4.14.0" PrivateAssets="none" />
-    <PackageReference Include="Whipstaff.CommandLine" Version="8.2.105-beta" />
+    <PackageReference Include="Whipstaff.CommandLine" Version="8.2.129" />
+    <PackageReference Include="Whipstaff.TestableIO.System.IO.Abstractions.TestingHelpers" Version="8.2.129" />
   </ItemGroup>
 
 </Project>
