--- a/src/NetTestRegimentation.SourceGenerator.DotNetTool/NetTestRegimentation.SourceGenerator.DotNetTool.csproj
+++ b/src/NetTestRegimentation.SourceGenerator.DotNetTool/NetTestRegimentation.SourceGenerator.DotNetTool.csproj
@@ -17,6 +17,8 @@
     </PackageReference>
     <PackageReference Include="Microsoft.Build.Locator" Version="1.9.1" />
     <PackageReference Include="Microsoft.CodeAnalysis.CSharp" Version="4.14.0" PrivateAssets="none" />
+    <PackageReference Include="Microsoft.CodeAnalysis.CSharp.Workspaces" Version="4.14.0" />
+    <PackageReference Include="Microsoft.CodeAnalysis.Workspaces.MSBuild" Version="4.14.0" />
     <PackageReference Include="Whipstaff.CommandLine" Version="8.2.129" />
     <PackageReference Include="Whipstaff.TestableIO.System.IO.Abstractions.TestingHelpers" Version="8.2.129" />
   </ItemGroup>
