--- a/src/NetTestRegimentation.IntegrationTests/NetTestRegimentation.IntegrationTests.csproj
+++ b/src/NetTestRegimentation.IntegrationTests/NetTestRegimentation.IntegrationTests.csproj
@@ -3,14 +3,12 @@
   <PropertyGroup>
     <TargetFramework>net9.0</TargetFramework>
     <Nullable>enable</Nullable>
+    <NoWarn>CA1034,CA1515</NoWarn>
   </PropertyGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\NetTestRegimentation.SourceGenerator.DotNetTool\NetTestRegimentation.SourceGenerator.DotNetTool.csproj" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <Folder Include="SourceGenerator\DotNetTool\" />
+    <ProjectReference Include="..\NetTestRegimentation.XUnit\NetTestRegimentation.XUnit.csproj" />
   </ItemGroup>
 
 </Project>
